# litress

./: .gitignore  pyproject.toml  pytest.ini
secret/: jwt-privet.pem  jwt-public.pem
src/: main.py  settings.py
src/api/: deps.py  enpoints.py
src/api/routers/: book.py  borrow.py  reader.py  user.py
src/core/: exceptions.py
src/core/models/: __init__.py  base.py  book.py  librarian.py  order.py  reader.py
src/core/schemas/: __init__.py  book.py  borrow.py  librarian.py  orders.py  reader.py  token.py
src/core/service/: book.py  borrow.py  librarian.py  reader.py
src/repository/: exception.py  session.py
src/repository/database/: base.py  book.py  borrow.py  librarian.py  reader.py
src/utils/: auth_jwt.py
tests/: conftest.py  test_book.py  test_borrow.py  test_librarin.py
