[project]
name = "litress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest[asyncio]>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
